fix: update InsurancePolicyEvent to use String for timestamp and ensure HistoryEntryMapper handles null policy history entities